PID controller working better now, but still weird why it stops updating entirely.

--- a/PID_testing.html
+++ b/PID_testing.html
@@ -42,6 +42,7 @@
     <label for="output">Output:</label>
     <input type="number" id="output" value="0" readonly>
 </div>
+<canvas id="chart" width="800" height="300" style="border:1px solid #000;"></canvas>
 <script src="PID_testing.js"></script>
 </body>
 </html>
