--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
         <link rel="stylesheet" type="text/css" href="test.css">
     </head>
     <body id = "root">
-        <script type = "module" src = "./src/index.jsx"></script>
+        <script type = "module" src = "./src/index.js"></script>
     </body>
 </html>
