--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Interactive Robotics Education Tool</title>
-
+        
         <!-- Bootstrap CSS File -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <!-- jQuery library -->
@@ -16,5 +16,6 @@
         <link rel="stylesheet" type="text/css" href="test.css">
     </head>
     <body id = "root">
+        <script type = "module" src = "./src/index.js"></script>
     </body>
 </html>
