--- a/src/PID/PID_testing.html
+++ b/src/PID/PID_testing.html
@@ -52,6 +52,6 @@
 </div>
 <p></p>
 <canvas id="chart" width="800" height="300" style="border:1px solid #000;"></canvas>
-<script type = "module" src="PID_testing.js"></script>
+<script src="PID_testing.js"></script>
 </body>
 </html>
